# code-snippets

py-automation-suite/: README.md  cli.py  config.toml  lint.sh  pyproject.toml  settings.yaml
py-automation-suite/src/: cli.py
py-automation-suite/src/core/: logger.py
py-automation-suite/src/scripts/: script2.py
py-automation-suite/src/scripts/script_one/: main.py
py-automation-suite/src/shared/: config.py  logger.py  utils.py
python-automation-template/: config.toml  main.py
python-automation-template/services/: logging.py  notification.py
python/py-automation-suite/: README.md  lint.sh
python/py-automation-suite/src/core/: config.py  utils.py
python/py-automation-suite/src/scripts/: script1.py
shell-scripting/: template.sh
