[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-automation-suite"
version = "0.1.0"
description = "Industrial-grade automation suite"
readme = "README.md"
# license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["automation", "cli"]

# Runtime dependencies
dependencies = [
    "loguru"
    ]

[project.optional-dependencies]
# Development dependencies (linting, formatting, type checking)
dev = [
    "black>=24.4.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

js = []
db = []

# Full install: `pip install -e ".[dev,js,db]"`
all = [
    "py-automation-suite[dev,js,db]",
]

[project.urls]
Homepage = "https://github.com/yourusername/py-automation-suite"
Documentation = "https://github.com/yourusername/py-automation-suite#readme"
Repository = "https://github.com/yourusername/py-automation-suite.git"
Issues = "https://github.com/yourusername/py-automation-suite/issues"

# CLI entry points – maps command name to function
[project.scripts]
automate = "cli:app"                # Your `cli.py` contains a Typer `app` object

# Alternative: you could define multiple separate commands
# scraper-one = "src.scripts.script_one.main:cli"
# scraper-two = "src.scripts.script_two.main:cli"

# Tool configuration for Hatchling
[tool.hatch.build.targets.wheel]
packages = ["src", "cli.py"]
