[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automation-scripts"
version = "0.1.0"
description = "Industrial-grade automation suite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["automation", "cli"]

# core dependencies
dependencies = [
    "typer>=0.9.0",
    "pendulum>=3.2.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.12.20260408",
]

# optional dependencies groups
[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
]
db = [
    "sqlalchemy>=2.0.0",
]
all = [
    { include-group = "dev" },
    { include-group = "db" },
]

[project.urls]
Homepage = "https://github.com/yourusername/py-automation-suite"
Documentation = "https://github.com/yourusername/py-automation-suite#readme"
Repository = "https://github.com/yourusername/py-automation-suite.git"
Issues = "https://github.com/yourusername/py-automation-suite/issues"

[project.scripts]
automate = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors      (PEP 8)
    "W",      # pycodestyle warnings    (PEP 8)
    "F",      # pyflakes                (unused imports, undefined names)
    "I",      # isort                   (import sorting)
    "B",      # flake8-bugbear          (common bugs)
    "C4",     # flake8-comprehensions   (better list/dict usage)
    "UP",     # pyupgrade               (modern Python syntax)
    "N",      # pep8-naming             (naming conventions)
    "SIM",    # flake8-simplify         (simplify code)
]

ignore = [
    "E501",   # line too long
    "B008",   # typer.Option in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
# strict = true
ignore_missing_imports = true
